@@ -398,6 +398,7 @@
 "EXPAND_RELATIVES_EVENTS_help";"~#gm_lang[EXPAND_RELATIVES_EVENTS]#~<br /><br />This option controls whether or not to automatically expand the <i>Events of close relatives</i> list.<br />"
 "HIDE_LIVE_PEOPLE_help";"~#gm_lang[HIDE_LIVE_PEOPLE]#~<br /><br />This option will enable all age related privacy settings and hide the details of living people.<br /><br />Living people are defined to be those who do not have an event more recent than the number of years specified in variable \$MAX_ALIVE_AGE.  For this purpose, births of children are considered to be such events as well.<br /><br />If this function is disabled, you can still use the other privacy options that are available on the Edit Privacy page.<br />"
 "REQUIRE_AUTHENTICATION_help";"~#gm_lang[REQUIRE_AUTHENTICATION]#~<br /><br />Enabling this option will force all visitors to login before they can view any data on the site.<br />"
+"EXCLUDE_REQUIRE_AUTHENTICATION_help";"~#gm_lang[EXCLUDE_REQUIRE_AUTHENTICATION]#~<br /><br />With #gm_lang[REQUIRE_AUTHENTICATION]# enabled, the list of IP's and/or hostnames will grant the visitor from this IP access to all information at visitor level.<br /><br />With #gm_lang[REQUIRE_AUTHENTICATION]# disabled, it will force the visitor from these IP's to login even before access to visitor level information is granted.<br /><br />Here you can enter the host names, IP addresses and IP ranges to be excluded.<br />All entries must be separated by a comma (,) or semicolon (;).<br />The format of the adresses is:<br />IP address: xxx.xxx.xxx.xxx<br />IP range: xxx.xxx.xxx.xxx-xxx.xxx.xxx.xxx (low first, high last)<br />Host names: myhost.com or (using wildcards) *.myproxy.com<br /><br />This sets $EXCLUDE_REQUIRE_AUTHENTICATION in the <i>gedcom configuration</i>.<br />"
 "WELCOME_TEXT_AUTH_MODE_help";"~#gm_lang[WELCOME_TEXT_AUTH_MODE]#~<br /><br />Here you can choose text to appear on the login screen when authentication mode is set to <b>Yes</b>. You must determine which predefined text is most appropriate.  You can also choose to enter your own custom Welcome text, but the text you enter will not be translated when your users change language.<br /><br />The predefined texts are:<ul><li><b>#gm_lang[WELCOME_TEXT_AUTH_MODE_OPT1]#:</b><div class="list_value_wrap">#gm_lang[welcome_text_auth_mode_1]#</div><br/></li><li><b>#gm_lang[WELCOME_TEXT_AUTH_MODE_OPT2]#:</b><div class="list_value_wrap">#gm_lang[welcome_text_auth_mode_2]#</div><br/></li><li><b>#gm_lang[WELCOME_TEXT_AUTH_MODE_OPT3]#:</b><div class="list_value_wrap">#gm_lang[welcome_text_auth_mode_3]#</div></li></ul>"
 "WELCOME_TEXT_AUTH_MODE_CUST_help";"~#gm_lang[WELCOME_TEXT_AUTH_MODE_CUST]#~<br /><br />If you have opted for custom Welcome text, you can type that text here.  The text will NOT be translated into the language of the visitor, but will be shown exactly as you typed it.<br /><br />If you wish, you can use HTML tags in the text.<br />"
 "WELCOME_TEXT_AUTH_MODE_CUST_HEAD_help";"~#gm_lang[WELCOME_TEXT_AUTH_MODE_CUST_HEAD]#~<br /><br />Choose to display a standard header for your custom Welcome text.  When your users change language, this header will appear in the new language.<br /><br />If set to <b>Yes</b>, the header will look look this:<div class="list_value_wrap">#gm_lang[welcome_text_cust_head]#</div>"
